feat: progress on 1.20.1 support